tests/should_fail/match_stmt_tuple_non_exhaust.nv
module fail
// Match statement: tuple with literal, no catchall
let t = (1, 2)
match t {
    (0, 0) => { println("origin") }
}
